--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,8 @@
             <div class="text">Münzen<br>
                 <input type="number" id="muenzen" class="input">
             </div>
-            <div class="text">Popularität<br>
-                <select id="popularitaet" name="tier" class="input" type="number">
-                    <option value="blank"></option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                </select>
+            <div class="text">Popularität (Tier)<br>
+                <input type="number" id="popularitaet" class="input">
             </div>
             <div class="text">Ressourcen<br>
                 <input type="number" id="ressourcen" class="input">
@@ -35,15 +30,7 @@
                 </select>
             </div>
             <div class="text">Sterne<br>
-                <select id="sterne" name="stern" class="input" type="number">
-                    <option value="blank"></option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>s
-                </select>
+                <input type="number" id="sterne" class="input">
             </div>
             <div class="text">Bonus<br>
                 <input type="number" id="bonus" class="input">
