--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
             <div class="text">Fabrik?<br>
                 <select id="fabrik" name="fabrik" class="input" type="number">
                     <option value="blank"></option>
-                    <option [ngValue]="true">Ja</option>
-                    <option [ngValue]="false">Nein</option>
+                    <option value="true">Ja</option>
+                    <option value="false">Nein</option>
                 </select>
             </div>
             <div class="text">Sterne<br>
