--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                 <input type="number" id="territorien" class="input">
             </div>
             <div class="text">Fabrik?<br>
-                <select id="fabrik" name="fabrik" class="input" type="number">
+                <select id="fabrik" name="fabrik" class="input">
                     <option value="blank"></option>
                     <option value="true">Ja</option>
                     <option value="false">Nein</option>
