--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="content">
         <p id="überschrift">Scythe Calculator</p>
-        <span id="actual-content">
+        <!--<span id="actual-content"> -->
             <form method="post" action="scoreboard.php" id="eingaben">
                 <div class="text">Münzen<br>
                     <input type="number" id="muenzen" class="input" name="muenzen" placeholder="Münzen">
@@ -43,7 +43,7 @@
                 </div>
                 <button id="berechnen">berechnen</button>
             </form>
-        </span>
+        <!--</span>-->
     </div>
 </body>
 </html>
