--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
             <form method="post" action="scoreboard.php" id="eingaben">
                 <div class="text">Münzen<br>
                     <input type="number" id="muenzen" class="input" name="muenzen" placeholder="Münzen">
-                    <output id="highscore_nuenzen" class="highscore"></output>
+                    <p id="highscore_muenzen" class="highscore"></p>
                 </div>
                 <div class="text">Popularität<br>
                     <input type="number" id="popularitaet" class="input" name="popularitaet" placeholder="Tier">
                 </div>
                 <div class="text">Ressourcen<br>
                     <input type="number" id="ressourcen" class="input" name="ressourcen" placeholder="Ressourcen">
-                    <output id="highscore_ressourcen" class="highscore"></output>
+                    <p id="highscore_ressourcen" class="highscore"></p>
                 </div>
                 <div class="text">Territorien<br>
                     <input type="number" id="territorien" class="input" name="territorien" placeholder="Territorien">
-                    <output id="highscore_territorien" class="highscore"></output>
+                    <p id="highscore_territorien" class="highscore"></p>
                 </div>
                 <div class="text">Fabrik?<br>
                     <select id="fabrik" name="fabrik" class="input" placeholder="Fabrik?">
@@ -39,11 +39,11 @@
                 </div>
                 <div class="text">Bonus<br>
                     <input type="number" id="bonus" class="input" name="bonus" placeholder="Bonus">
-                    <output id="highscore_bonus" class="highscore"></output>
+                    <p id="highscore_bonus" class="highscore"></p>
                 </div>
                 <div class="text">Gesamt<br>
                     <input type="number" id="gesamt" class="input" name="gesamt" placeholder="Ergebnis" disabled>
-                    <output id="highscore_gesamt" class="highscore"></output>
+                    <p id="highscore_gesamt" class="highscore"></p>
                 </div>
                 <button id="berechnen">berechnen</button>
             </form>
