--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+<!DOCTYPE html>
 <html lang="de">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -7,7 +7,6 @@
     <script src="app.js" async defer></script>
     <title>Scythe Calculator</title>
 </head>
-
 <body>
     <div id="content">
         <p id="überschrift">Scythe Calculator</p>
@@ -58,7 +57,6 @@
                     <input type="number" id="gesamt" class="input" name="gesamt" placeholder="Ergebnis" disabled>
                     <p id="highscore_gesamt" class="highscore"></p>
                 </div>
-    
                 <button id="berechnen">berechnen</button>
             </form>
     </div>
