--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="stylecopy.css">
+    <link rel="stylesheet" href="style.css">
     <script src="app.js" async defer></script>
     <title>Scythe Calculator</title>
 </head>
